<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    >

    <item android:id="@+id/action_addDevice"
          android:icon="@drawable/add_new"
          android:title="@string/action_addDevice"
          android:orderInCategory="100"
          app:showAsAction="always" />

    <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:orderInCategory="200" app:showAsAction="always"
          android:icon="@drawable/ic_action_discard"/>

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="400" app:showAsAction="never" />


</menu>
