<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bonny.sandterm.Control_Panel">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_addUser"
        android:icon="@drawable/add_new"
        android:title="@string/action_addDevice"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_deleteUser"
        android:title="@string/action_delete"
        android:orderInCategory="200" app:showAsAction="always"
        android:icon="@drawable/ic_action_discard"/>





</menu>
